--- a/Config.yaml
+++ b/Config.yaml
@@ -14,3 +14,7 @@ ItBit:
     api:    JNVb9RRI/GI6CikzWXstOg
     secret: R3PGdMoUf+PIR9Glu7Bokp0BU926HsBfyKnexiMy0w4
     uid:    511D55F2-0DEF-47AE-BB3F-8E1D70F80A18
+
+Available: [OKCoinCN, BitBays, ItBit]
+
+Enabled: [OKCoinCN, BitBays]
