--- a/logging_config.ini
+++ b/logging_config.ini
@@ -40,7 +40,7 @@ keys=consoleHandler,fileHandler
 keys=fileFormatter,consoleFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
 
 [logger_sLogger]
