work for a while

--- a/logging_config.ini
+++ b/logging_config.ini
@@ -8,7 +8,7 @@ keys=consoleHandler,fileHandler
 keys=fileFormatter,consoleFormatter
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 
 [logger_sLogger]
@@ -34,5 +34,5 @@ format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(levelname)s - %(message)s
+format=%(levelname)s %(filename)15s:%(lineno)3s - %(message)s
 datefmt=
