--- a/logging_config.ini
+++ b/logging_config.ini
@@ -8,24 +8,24 @@ keys=consoleHandler,fileHandler
 keys=fileFormatter,consoleFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=consoleHandler
 
 [logger_sLogger]
-level=DEBUG
+level=INFO
 handlers=consoleHandler,fileHandler
 qualname=sLogger
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=consoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
-level=DEBUG
+level=INFO
 formatter=fileFormatter
 args=('%(logfilename)s',)
 
@@ -34,5 +34,5 @@ format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(levelname)8s %(asctime)s %(thread)d %(filename)20s:%(lineno)3s - %(message)s
+format=%(levelname)8s %(asctime)s %(thread)d %(filename)20s: %(lineno)3s - %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
