--- a/logging_config.ini
+++ b/logging_config.ini
@@ -8,24 +8,24 @@ keys=consoleHandler,fileHandler
 keys=fileFormatter,consoleFormatter
 
 [logger_root]
-level=INFO
+level=WARNING
 handlers=consoleHandler
 
 [logger_sLogger]
-level=INFO
+level=WARNING
 handlers=consoleHandler,fileHandler
 qualname=sLogger
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=WARNING
 formatter=consoleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
-level=INFO
+level=WARNING
 formatter=fileFormatter
 args=('%(logfilename)s',)
 
