fix handle_retry no return error

--- a/logging_config.ini
+++ b/logging_config.ini
@@ -34,5 +34,5 @@ format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 datefmt=
 
 [formatter_consoleFormatter]
-format=%(levelname)8s %(asctime)s %(thread)d %(filename)20s: %(lineno)3s - %(message)s
+format=%(levelname)8s %(asctime)s %(thread)30d %(filename)20s: %(lineno)3s - %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
