--- a/Config.yaml
+++ b/Config.yaml
@@ -7,8 +7,12 @@ OKCoinCOM:
     secret: 3B82BE714D531E00D99A6DF3149FA78D
 
 BitBays:
-    api:    A-BCB3EDD7-6D3D1D1B-67E32436
-    secret: E090ADCD3D87BA69770D8EE3DEF906FBCDF07473
+    api:    1D-E3E40687-2DBF5237-E64AB02F
+    secret: 5965981998D692EF09DFFE42B86B75C8662EFF6F
+
+BTCChina:
+    api:    03f9e8e7-71bb-476a-b58e-fa0b092f1f32
+    secret: d0ecaae2-f860-48d0-ad5d-ac84c499f0e1
 
 ItBit:
     api:    JNVb9RRI/GI6CikzWXstOg
