--- a/logging_config.ini
+++ b/logging_config.ini
@@ -1,38 +1,38 @@
 [loggers]
-keys=root,sLogger
+keys = root,sLogger
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys = consoleHandler,fileHandler
 
 [formatters]
-keys=fileFormatter,consoleFormatter
+keys = fileFormatter,consoleFormatter
 
 [logger_root]
-level=WARNING
-handlers=consoleHandler
+level = WARNING
+handlers = consoleHandler
 
 [logger_sLogger]
-level=WARNING
-handlers=consoleHandler,fileHandler
-qualname=sLogger
-propagate=0
+level = INFO
+handlers = fileHandler
+qualname = sLogger
+propagate = 1
 
 [handler_consoleHandler]
-class=StreamHandler
-level=WARNING
-formatter=consoleFormatter
-args=(sys.stdout,)
+level = WARNING
+class = StreamHandler
+formatter = consoleFormatter
+args = (sys.stdout,)
 
 [handler_fileHandler]
-class=FileHandler
-level=WARNING
-formatter=fileFormatter
-args=('%(logfilename)s',)
+class = FileHandler
+level = INFO
+formatter = fileFormatter
+args = ('%(logfilename)s',)
 
 [formatter_fileFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=
+format = %(levelname)9s %(asctime)s %(filename)25s: %(lineno)3s - %(message)s
+datefmt = %Y-%m-%d %H:%M:%S
 
 [formatter_consoleFormatter]
-format=%(levelname)8s %(asctime)s %(thread)20d %(filename)25s: %(lineno)3s - %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
+format = %(levelname)9s %(asctime)s %(thread)20d %(filename)25s: %(lineno)3s - %(message)s
+datefmt = %Y-%m-%d %H:%M:%S
