add huo private

--- a/platforms.yaml
+++ b/platforms.yaml
@@ -6,7 +6,7 @@ BitBays:
     api:    1D-E3E40687-2DBF5237-E64AB02F
     secret: 5965981998D692EF09DFFE42B86B75C8662EFF6F
 
-Huobi:
+HuoBi:
     api:    09c77932-27624ec6-ac6e34e6-e7a34
     secret: 0d73d1f4-db907569-5493b4af-44060
 
