--- a/platforms.yaml
+++ b/platforms.yaml
@@ -29,7 +29,7 @@ BTC38:
 
 Available: [OKCoinCN, BitBays, ItBit, HuoBi]
 
-Enabled: [OKCoinCN, BitBays]
+Enabled: [OKCoinCN, HuoBi]
 
 Emailing:
     sender:   btc_hongxuchen@outlook.com
