--- a/platforms.yaml
+++ b/platforms.yaml
@@ -23,7 +23,7 @@ Available: [OKCoinCN, BitBays, HuoBi]
 
 Enabled: [OKCoinCN, HuoBi]
 
-CoinType: btc
+CoinType: ltc
 
 Emailing:
     sender:   cc_hongxuchen@outlook.com
