--- a/platforms.yaml
+++ b/platforms.yaml
@@ -25,7 +25,8 @@ CHBTC:
 
 Available: [OKCoinCN, BitBays, HuoBi, CHBTC]
 
-Enabled: [OKCoinCN, CHBTC]
+# Enabled: [OKCoinCN, CHBTC]
+Enabled: [HuoBi, BitBays]
 
 CoinType: btc
 
