send msg for both localhost and gmail

--- a/platforms.yaml
+++ b/platforms.yaml
@@ -30,9 +30,11 @@ Enabled: [HuoBi, BitBays]
 CoinType: btc
 
 Emailing:
-    username: leftcopy.chx@gmail.com
-    password: 19890806chenhx
-    server:   smtp.gmail.com
+    username: cc_hongxuchen@outlook.com
+#    username: leftcopy.chx@gmail.com
+#    password: 19890806chenhx
+#    server:   smtp.gmail.com
+    server: localhost
     # username: "chenhx.666@163.com"
     # password: "V2BAZRB2chenhx"
     # server: "smtp.163.com"
