--- a/logging.yaml
+++ b/logging.yaml
@@ -2,10 +2,10 @@ version: 1
 
 formatters:
   fileFormatter:
-    format: '%(levelname)9s %(asctime)s %(thread)20d %(filename)25s: %(lineno)3s - %(message)s'
+    format: '%(levelname)9s %(asctime)s %(threadName)15s %(filename)25s: %(lineno)3s - %(message)s'
     datefmt: '%Y-%m-%d %H:%M:%S'
   consoleFormatter:
-    format: '%(levelname)9s %(asctime)s %(filename)25s: %(lineno)3s - %(message)s'
+    format: '%(asctime)s  %(message)s'
     datefmt: '%Y-%m-%d %H:%M:%S'
 
 handlers:
