--- a/settings/log.yaml
+++ b/settings/log.yaml
@@ -15,15 +15,19 @@ handlers:
     level: WARNING
     stream: ext://sys.stdout
   tracker_file:
-    class: logging.FileHandler
+    class: logging.handlers.RotatingFileHandler
     formatter: trackerFormatter
     level: DEBUG
-    filename: log/tracker.LOG
+    filename: log/tracker.log
+    maxBytes: 10485760
+    backupCount: 5
   asset_file:
-    class: logging.FileHandler
+    class: logging.handlers.RotatingFileHandler
     formatter: simpleFormatter
     level: INFO
-    filename: log/asset.LOG
+    filename: log/asset.log
+    maxBytes: 10485760
+    backupCount: 5
 
 loggers:
   logger:
