fix okc key bug

--- a/settings/plt.yaml
+++ b/settings/plt.yaml
@@ -1,6 +1,8 @@
 OKCoinCN:
-    api:    b38a10a2-dde1-4fd5-b740-7b0658ae029b
-    secret: 079DA5853A5730DF079EA78B4790DCF3
+#    api:    b38a10a2-dde1-4fd5-b740-7b0658ae029b
+#    secret: 079DA5853A5730DF079EA78B4790DCF3
+    api:    dd4fa1e6-32f1-42d9-aec8-9c31c108ec62
+    secret: 7F098A53B72B2B347BCF70009BF598F2
 
 BitBays:
     api:    1D-E3E40687-2DBF5237-E64AB02F
