--- a/settings/plt.yaml
+++ b/settings/plt.yaml
@@ -1,6 +1,4 @@
 OKCoinCN:
-#    api:    b38a10a2-dde1-4fd5-b740-7b0658ae029b
-#    secret: 079DA5853A5730DF079EA78B4790DCF3
     api:    dd4fa1e6-32f1-42d9-aec8-9c31c108ec62
     secret: 7F098A53B72B2B347BCF70009BF598F2
 
@@ -20,6 +18,10 @@ ItBit:
 OKCoinCOM:
     api:    fe7fa03d-11da-4490-a99c-c0c4ea21776e
     secret: 3B82BE714D531E00D99A6DF3149FA78D
+
+OKFuture:
+    api:    7006e1d4-40e6-4c38-9674-9ae78e3e44f4
+    secret: 4D7BD59148F444B28B96E0C863224382
 
 CHBTC:
     api:    47b01fbe-0558-455c-bc49-b73be097a656
